--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yakka Plugin Center - Coming Soon</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
     body {
       background-color: #3D5F6B;
@@ -34,28 +35,31 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: #60828E; 
-      border: 4px solid #CDE3EE;
-      border-bottom: 8px solid #CDE3EE;
-      border-top: 8px solid #CDE3EE;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-    }
-    .coming-soon h1,p {
+      border-radius: 1rem;
       color: white;
+      max-width: 600px !important;
     }
   </style>
 </head>
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="coming-soon">
-          <h1 class="d-1">Website Coming Soon!</h1>
-          <p>Yakka Plugin Center</p>
-        </div>
-      </div>
+<body class="d-flex align-items-center justify-content-center">
+  <div class="container container-sm px-3 py-2 coming-soon">
+    <h3 class="mb-1">Heya!<hr class="my-1"></h3>
+    <p>Expecting a website here? Sorry,but this website is still under development. If you want to support my work then you can donate me using links below. Also if you need something else,you can also contact me via social media below! Thanks For your Attention.</p><hr>
+    <p>Mengharapkan situs web di sini?  Mohon maaf, website ini masih dalam tahap pengembangan.  Jika Anda ingin mendukung pekerjaan saya maka Anda dapat menyumbangkan saya menggunakan tautan di bawah.  Juga jika Anda membutuhkan sesuatu yang lain, Anda juga dapat menghubungi saya melalui media sosial di bawah ini!  Terima kasih atas perhatiannya.</p>
+    <hr class="my-1">
+    <h5 class="my-1">Plugins:</h5>
+    <div class="btn-group w-100">
+      <a href="https://forum.theotown.com/search.php?author_id=10216&fid%5B%5D=43&sc=1&sr=topics&sk=t&sf=firstpost" class="btn btn-sm btn-outline-light"><i class="bi bi-window"></i> Forum > Showcase</a>
+      <a href="https://github.com/Kiki012184?tab=repositories" class="btn btn-sm btn-outline-light"><i class="bi bi-github"></i> Github > Repository</a>
     </div>
+    <br>
+    <h5 class="my-1">Donation:</h5>
+    <div class="btn-group w-100">
+      <a href="https://sociabuzz.com/yakka_id/tribe" class="btn btn-sm btn-outline-light"><i class="bi bi-globe-asia-australia"></i> Donasi (INDONESIA)</a>
+      <a href="#" class="btn btn-sm btn-outline-light disabled"><i class="bi bi-globe-europe-africa"></i>  Donation (INTERNATIONAL)</a>
+    </div><hr>
+    <h5 class="my-1">Main Website:</h5>
+    <a href="https://bit.ly/K012WEBINT" class="btn btn-sm btn-outline-light w-100"><i class="bi bi-globe"></i> My main website</a>
   </div>
 </body>
 </html>
